remove report controller and update swagger
